--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>flashcard</title>
 </head>
 <body>
@@ -12,22 +13,33 @@
                 <div class="cartaoblack__conteudo">
                     <h3>programacao</h3>
                     <div class="cartaoblack__conteudo__pergunta">
-                        o que é JavaScript ?
+                        <p>o que é JavaScript ?</p>
                     </div>
                     <div class="cartaoblack__conteudo__resposta">
-                        É uma linguagem de 
-                        programação
+                        <p>É uma linguagem de 
+                        programação</p>
                     </div>
             </article>
             <article class="cartaoblack">
                 <div class="cartaoblack__conteudo">
                     <h3>programacao</h3>
                     <div class="cartaoblack__conteudo__pergunta">
-                        o que é CSS ?
+                    <p>o que é CSS ?</p>
                     </div>
                     <div class="cartaoblack__conteudo__resposta">
-                        É uma linguagem de 
-                        estilização
+                    <p>É uma linguagem de 
+                        estilização</p>
+                    </div>
+            </article>
+            <article class="cartaoblack">
+                <div class="cartaoblack__conteudo">
+                    <h3>programacao</h3>
+                    <div class="cartaoblack__conteudo__pergunta">
+                    <p>o que é CSS ?</p>
+                    </div>
+                    <div class="cartaoblack__conteudo__resposta">
+                    <p>É uma linguagem de 
+                        estilização</p>
                     </div>
             </article>
         </section>
